--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -1,7 +1,7 @@
 #page-map {
   position: relative;
   display: flex;
-  width: 110vw;
+  width: 100vw;
   height: 100vh;
 }
 
@@ -36,6 +36,10 @@
   font-weight: 800;
 }
 
+#page-map .leaflet-container {
+  z-index: 5;
+}
+
 #page-map .create-orphanage {
   position: absolute;
   display: flex;
@@ -49,6 +53,7 @@
   border-radius: 1.25rem;
   transition: background-color 0.2s;
   cursor: pointer;
+  z-index: 10;
 }
 
 #page-map .create-orphanage:hover {
